src/type_atoms/snapshots/syn_state_machine__type_atoms__adt__tests_tuple__it_steps_back_for_options.snap
---
source: src/type_atoms/adt.rs
expression: "(insta_match_test!(+ parse (Option<Ident>, Option<Punct>) : <),\n    insta_match_test!(* peek (Option<Ident>, Option<Punct>) : <))"
---
(
    Ok(
        (
            None,
            Some(
                Punct {
                    char: '<',
                    spacing: Alone,
                },
            ),
        ),
    ),
    Some(
        1,
    ),
)
